	  --enable-ext-mouse option, rolling the mouse wheel up or down
	  will move the cursor three lines up or down.  Note that
	  ncurses built without --enable-ext-mouse needs to handle both
	  clicks and releases of the first mouse button, but ncurses
	  built with --enable-ext-mouse only needs to handle releases,
	  so keep dealing with both events. (DLR, suggested by Helmut
	  Jarausch)
  edit_scroll()
	- Fix problem where the screen wouldn't be updated properly if
	  you paged up with the first line of the file onscreen and the
	  mark on. (DLR)
- configure.ac:
	- Update copyright notice to account for modifications. (DLR)
- COPYING:
	- Add a copy of the GNU GPL version 3. (DLR)
- COPYING.DOC:
	- Add a copy of the GNU FDL version 1.2. (DLR)
- Makefile.am:
	- Add COPYING.DOC to EXTRA_DIST. (DLR)
- doc/faq.html:
	- Update RPM links for nano 2.0.x. (DLR)
	- Update links to the Free Translation Project. (DLR)
- doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
	- Make all copyright notices consistent. (DLR)
	- Delete translation of old licensing terms, until it can be
	  updated. (DLR)
	- Add translation of new licensing terms by Jean-Philippe
	  Guérard.
	- Fix copyright notices.  The copyrights are disclaimed on these
	  translations, but the copyrights of the untranslated works
	  also apply.  From Jean-Philippe Guérard.
- doc/man/fr/nanorc.5:
	- Remove trailing whitespace. (DLR)
- doc/man/rnano.1, doc/man/fr/rnano.1:
	- Add missing copyright notice from nano-tiny.1, which rnano.1
	  is based on. (DLR)

GNU nano 2.0.6 - 2007.04.26
- text.c:
  backup_lines()
	- Avoid a segfault when the mark begins and ends on the line
	  after the last line of the paragraph. (DLR)
- TODO:
	- Add entries for fixing limitations with pasting text and
	  handling bad/incomplete UTF-8 sequences. (DLR)

GNU nano 2.0.5 - 2007.04.22
- files.c:
  open_file()
	- Open files using their full paths whenever possible, so that